--- a/build.gradle
+++ b/build.gradle
@@ -23,5 +23,13 @@ dependencies {
     implementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
     // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+    // https://mvnrepository.com/artifact/io.qameta.allure/allure-testng
+    implementation group: 'io.qameta.allure', name: 'allure-testng', version: '2.25.0'
+
+}
+test {
+    useTestNG() {
+        suites "./src/test/resources/suite.xml"
+    }
 }
 
